HTML Section Contact Form finished

--- a/root/index.html
+++ b/root/index.html
@@ -65,6 +65,10 @@
           <p>$650</p>
         </article>
       </section>
+
+      <section id="contact"></section>
+
+      <footer></footer>
     </main>
   </body>
 </html>
