html basic structure finished

--- a/root/index.html
+++ b/root/index.html
@@ -17,11 +17,13 @@
       </div>
 
       <nav>
-        <h2>
-          <img src="img/Catgatito.svg" alt="cat icon" />
-          Front<span>Cat&Dog</span>
-          <img src="img/Dogperro.svg" alt="dog icon" />
-        </h2>
+        <div id="icon-main icon">
+          <h2>
+            <img src="img/Catgatito.svg" alt="cat icon" />
+            Front<span>Cat&Dog</span>
+            <img src="img/Dogperro.svg" alt="dog icon" />
+          </h2>
+        </div>
         <ul>
           <li>Categorías</li>
           <li>Pets</li>
@@ -51,24 +53,71 @@
 
         <article class="product-card">
           <img src="img/churrasquito.png" alt="food for dog" />
-          <h3>Juguete Churrasquito</h3>
+          <h4>Juguete Churrasquito</h4>
           <p>$150</p>
         </article>
         <article class="product-card">
           <img src="img/comedero.png" alt="food bowl" />
-          <h3>Comedero para perro</h3>
+          <h4>Comedero para perro</h4>
           <p>$250</p>
         </article>
         <article class="product-card">
           <img src="img/Huesito.png" alt="bone toy" />
-          <h3>Juguete Huesito</h3>
+          <h4>Juguete Huesito</h4>
           <p>$650</p>
         </article>
       </section>
 
-      <section id="contact"></section>
+      <section id="contact">
+        <h3>Contáctanos</h3>
+        <form action="#" method="POST">
+          <input type="text" placeholder="Nombre y Apellido" />
+          <input type="email" placeholder="Ingresá tu correo electrónico" />
+          <input type="tel" placeholder="Teléfono" />
+          <button type="reset">Resetear</button>
+          <button type="submit">Enviar</button>
+        </form>
+      </section>
 
-      <footer></footer>
+      <footer>
+        <div id="subscription">
+          <img src="img/enviar-correo 1.svg" alt="sending mail" />
+          <form action="#" method="POST">
+            <input type="text" placeholder="Ingresá tu correo electronico" />
+            <button type="submit">Suscribirme</button>
+          </form>
+        </div>
+
+        <section id="contact-information">
+          <div id="location">
+            <img src="img/Iconolocation.svg" alt="location icon" />
+            <h5>Localidad</h5>
+            <p>Calle - provincia</p>
+          </div>
+          <div id="phone">
+            <img src="img/Iconophone.svg" alt="phone icon" />
+            <h5>Teléfono</h5>
+            <p>Número de teléfono</p>
+          </div>
+          <div id="mail">
+            <img src="img/Iconomail.png" alt="mail icon" />
+            <h5>Correo Electrónico</h5>
+            <p>Dirección de correo</p>
+          </div>
+        </section>
+
+        <div id="icon-secondary icon">
+          <h2>
+            <img src="img/Catgatito.svg" alt="cat icon" />
+            Front<span>Cat&Dog</span>
+            <img src="img/Dogperro.svg" alt="dog icon" />
+          </h2>
+        </div>
+
+        <div id="legal-information">
+          <p>Todos los derechos reservados Front End</p>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
