CSS for the header finished

--- a/root/index.html
+++ b/root/index.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pet Shop</title>
+
+    <!-- STYLES -->
+    <link rel="stylesheet" href="css/style.css" />
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -17,18 +28,16 @@
       </div>
 
       <nav>
-        <div id="icon-main icon">
-          <h2>
-            <img src="img/Catgatito.svg" alt="cat icon" />
-            Front<span>Cat&Dog</span>
-            <img src="img/Dogperro.svg" alt="dog icon" />
-          </h2>
+        <div class="icon-main icon">
+          <img src="img/Catgatito.svg" alt="cat icon" />
+          <h2>Front<span>Cat&Dog</span></h2>
+          <img src="img/Dogperro.svg" alt="dog icon" />
         </div>
         <ul>
-          <li>Categorías</li>
-          <li>Pets</li>
-          <li>Nosotros</li>
-          <li>Contactanos</li>
+          <li><img src="img/pawprint 12.svg" alt="" />Categorías</li>
+          <li><img src="img/pawprint 12.svg" alt="" />Pets</li>
+          <li><img src="img/pawprint 12.svg" alt="" />Nosotros</li>
+          <li><img src="img/pawprint 12.svg" alt="" />Contactanos</li>
         </ul>
       </nav>
     </header>
@@ -106,12 +115,10 @@
           </div>
         </section>
 
-        <div id="icon-secondary icon">
-          <h2>
-            <img src="img/Catgatito.svg" alt="cat icon" />
-            Front<span>Cat&Dog</span>
-            <img src="img/Dogperro.svg" alt="dog icon" />
-          </h2>
+        <div class="icon-secondary icon">
+          <img src="img/Catgatito.svg" alt="cat icon" />
+          <h2>Front<span>Cat&Dog</span></h2>
+          <img src="img/Dogperro.svg" alt="dog icon" />
         </div>
 
         <div id="legal-information">
