Finished the featured products CSS

--- a/root/index.html
+++ b/root/index.html
@@ -60,21 +60,23 @@
           <li>Comida</li>
         </ul>
 
-        <article class="product-card">
-          <img src="img/churrasquito.png" alt="food for dog" />
-          <h4>Juguete Churrasquito</h4>
-          <p>$150</p>
-        </article>
-        <article class="product-card">
-          <img src="img/comedero.png" alt="food bowl" />
-          <h4>Comedero para perro</h4>
-          <p>$250</p>
-        </article>
-        <article class="product-card">
-          <img src="img/Huesito.png" alt="bone toy" />
-          <h4>Juguete Huesito</h4>
-          <p>$650</p>
-        </article>
+        <div id="cards-grid">
+          <article class="product-card">
+            <img src="img/churrasquito.png" alt="food for dog" />
+            <h4>Juguete Churrasquito</h4>
+            <p>$150</p>
+          </article>
+          <article class="product-card">
+            <img src="img/comedero.png" alt="food bowl" />
+            <h4>Comedero para perro</h4>
+            <p>$250</p>
+          </article>
+          <article class="product-card">
+            <img src="img/Huesito.png" alt="bone toy" />
+            <h4>Juguete Huesito</h4>
+            <p>$650</p>
+          </article>
+        </div>
       </section>
 
       <section id="contact">
