--- a/root/index.html
+++ b/root/index.html
@@ -85,8 +85,10 @@
           <input type="text" placeholder="Nombre y Apellido" />
           <input type="email" placeholder="Ingresá tu correo electrónico" />
           <input type="tel" placeholder="Teléfono" />
-          <button type="reset">Resetear</button>
-          <button type="submit">Enviar</button>
+          <div id="btns">
+            <button class="btn btn-secondary" type="reset">Resetear</button>
+            <button class="btn btn-primary" type="submit">Enviar</button>
+          </div>
         </form>
       </section>
 
