Subscription section completed

--- a/root/index.html
+++ b/root/index.html
@@ -82,9 +82,21 @@
       <section id="contact">
         <h3>Contáctanos</h3>
         <form action="#" method="POST">
-          <input type="text" placeholder="Nombre y Apellido" />
-          <input type="email" placeholder="Ingresá tu correo electrónico" />
-          <input type="tel" placeholder="Teléfono" />
+          <input
+            class="input input-contact"
+            type="text"
+            placeholder="Nombre y Apellido"
+          />
+          <input
+            class="input input-contact"
+            type="email"
+            placeholder="Ingresá tu correo electrónico"
+          />
+          <input
+            class="input input-contact"
+            type="tel"
+            placeholder="Teléfono"
+          />
           <div id="btns">
             <button class="btn btn-secondary" type="reset">Resetear</button>
             <button class="btn btn-primary" type="submit">Enviar</button>
@@ -93,13 +105,20 @@
       </section>
 
       <footer>
-        <div id="subscription">
-          <img src="img/enviar-correo 1.svg" alt="sending mail" />
+        <section id="subscription">
+          <div class="subscription-text">
+            <img src="img/enviar-correo 1.svg" alt="sending mail" />
+            <h5>Suscríbete para más novedades</h5>
+          </div>
           <form action="#" method="POST">
-            <input type="text" placeholder="Ingresá tu correo electronico" />
-            <button type="submit">Suscribirme</button>
+            <input
+              class="input input-newsletter"
+              type="text"
+              placeholder="Ingresá tu correo electronico"
+            />
+            <button class="btn" type="submit">Suscribirme</button>
           </form>
-        </div>
+        </section>
 
         <section id="contact-information">
           <div id="location">
