Footer CSS finished

--- a/root/index.html
+++ b/root/index.html
@@ -121,28 +121,36 @@
         </section>
 
         <section id="contact-information">
-          <div id="location">
-            <img src="img/Iconolocation.svg" alt="location icon" />
-            <h5>Localidad</h5>
-            <p>Calle - provincia</p>
+          <div class="contact-container">
+            <div id="location">
+              <img src="img/Iconolocation.svg" alt="location icon" />
+              <div class="details">
+                <h5>Localidad</h5>
+                <p>Calle - provincia</p>
+              </div>
+            </div>
+            <div id="phone">
+              <img src="img/Iconophone.svg" alt="phone icon" />
+              <div class="details">
+                <h5>Teléfono</h5>
+                <p>Número de teléfono</p>
+              </div>
+            </div>
+            <div id="mail">
+              <img src="img/Iconomail.png" alt="mail icon" />
+              <div class="details">
+                <h5>Correo Electrónico</h5>
+                <p>Dirección de correo</p>
+              </div>
+            </div>
           </div>
-          <div id="phone">
-            <img src="img/Iconophone.svg" alt="phone icon" />
-            <h5>Teléfono</h5>
-            <p>Número de teléfono</p>
-          </div>
-          <div id="mail">
-            <img src="img/Iconomail.png" alt="mail icon" />
-            <h5>Correo Electrónico</h5>
-            <p>Dirección de correo</p>
+
+          <div class="icon-secondary icon">
+            <img src="img/Catgatito.svg" alt="cat icon" />
+            <h2>Front<span>Cat&Dog</span></h2>
+            <img src="img/Dogperro.svg" alt="dog icon" />
           </div>
         </section>
-
-        <div class="icon-secondary icon">
-          <img src="img/Catgatito.svg" alt="cat icon" />
-          <h2>Front<span>Cat&Dog</span></h2>
-          <img src="img/Dogperro.svg" alt="dog icon" />
-        </div>
 
         <div id="legal-information">
           <p>Todos los derechos reservados Front End</p>
