Disabled form submission

--- a/root/index.html
+++ b/root/index.html
@@ -81,7 +81,7 @@
 
       <section id="contact">
         <h3>Contáctanos</h3>
-        <form action="#" method="POST">
+        <form action="javascript:void(0)" method="POST">
           <input
             class="input input-contact"
             type="text"
@@ -110,7 +110,7 @@
             <img src="img/enviar-correo 1.svg" alt="sending mail" />
             <h5>Suscríbete para más novedades</h5>
           </div>
-          <form action="#" method="POST">
+          <form action="javascript:void(0)" method="POST">
             <input
               class="input input-newsletter"
               type="text"
