Made the featured products responsive by allowing the images to wrap

--- a/root/index.html
+++ b/root/index.html
@@ -22,8 +22,8 @@
       <div id="upper-banner">
         <p>Grandes ofertas en comederos</p>
         <ul>
-          <li>Español</li>
-          <li>ARG$</li>
+          <li>Español<img src="./img/downArrow.svg" alt="down arrow" /></li>
+          <li>ARG$<img src="./img/downArrow.svg" alt="down arrow" /></li>
         </ul>
       </div>
 
@@ -34,10 +34,10 @@
           <img src="img/Dogperro.svg" alt="dog icon" />
         </div>
         <ul>
-          <li><img src="img/pawprint 12.svg" alt="" />Categorías</li>
-          <li><img src="img/pawprint 12.svg" alt="" />Pets</li>
-          <li><img src="img/pawprint 12.svg" alt="" />Nosotros</li>
-          <li><img src="img/pawprint 12.svg" alt="" />Contactanos</li>
+          <li><img src="./img/pawprint-2.svg" alt="paw image" />Categorías</li>
+          <li><img src="./img/pawprint-2.svg" alt="paw image" />Pets</li>
+          <li><img src="./img/pawprint-2.svg" alt="paw image" />Nosotros</li>
+          <li><img src="./img/pawprint-2.svg" alt="paw image" />Contactanos</li>
         </ul>
       </nav>
     </header>
@@ -52,7 +52,7 @@
       </section>
 
       <section id="featured-products">
-        <img src="img/pawprint 1.svg" alt="" />
+        <img src="img/pawprint-1.svg" alt="" />
         <h1>Productos Destacados</h1>
         <ul>
           <li>Comederos</li>
