Made the page responsive for 900px and 600px breakpoints

--- a/root/index.html
+++ b/root/index.html
@@ -39,6 +39,9 @@
           <li><img src="./img/pawprint-2.svg" alt="paw image" />Nosotros</li>
           <li><img src="./img/pawprint-2.svg" alt="paw image" />Contactanos</li>
         </ul>
+        <div class="menu-icon">
+          <img src="./img/menu-icon.svg" alt="" />
+        </div>
       </nav>
     </header>
 
